# EleanorBlank

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  conanfile.py
scripts/: build_project.py  install_dependencies.py
scripts/cmake/: artifacts.cmake  astyle.cmake  parse.cmake  precompiled_header.cmake  settings.cmake  ultralight.cmake
scripts/cmake/conan/: CMakeLists.txt
scripts/doxygen/: Doxyfile.doxygen  generate_docs_doxygen.py
src/: CMakeLists.txt
src/common/: config_helper.h  consts.h  exception.h  packet.h  status_code_helper.h  status_code_macro.h  status_codes.h  versions.h
src/components/: CMakeLists.txt
src/components/application/: CMakeLists.txt
src/components/application/source/: main.cpp
src/components/config/: CMakeLists.txt
src/components/config/source/: config.cpp  config.h  defines.h  document.cpp  document.h  keep_alive_data.cpp  keep_alive_data.h  main.cpp  pch.h
src/components/filesystem/: CMakeLists.txt
src/components/filesystem/source/: file_system.h  pch.h  windows_file_system.cpp
src/components/ipc_network/: CMakeLists.txt
src/components/ipc_network/source/: pch.h
src/components/ipc_network/source/tcp/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h
src/components/ipc_network/source/udp/: udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h  udp_socket.cpp  udp_socket.h
src/components/logger/: CMakeLists.txt
src/components/logger/source/: logger.cpp  logger.h  main.cpp  pch.h  settings.cpp  settings.h
src/components/ui/: CMakeLists.txt
src/components/ui/source/: Config.cpp  Config.h  Defines.h  Engine.cpp  Engine.h  Loader.cpp  Loader.h  Logger.cpp  Logger.h  View.cpp  View.h  Window.cpp  Window.h  pch.h
src/components/ui/source/glfw/: GPUDriverGL.cpp  GPUDriverGL.h  RenderWindow.cpp  RenderWindow.h
src/components/ui/source/glfw/shaders/: shader_fill_frag.h  shader_fill_path_frag.h  shader_v2f_c4f_t2f_t2f_d28f_vert.h  shader_v2f_c4f_t2f_vert.h
src/interfaces/config/: iconfig.h
src/interfaces/filesystem/: file_system.h
src/interfaces/logger/: ilogger.h
src/interfaces/ui/: interfaces.h
src/utils/: exception_catch.h
